[package]
name = "moyosola_gift_app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1.19"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
once_cell = "1.19"
parking_lot = "0.12"   # fast lock for shared state
